--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -89,6 +89,7 @@
                     android:layout_height="100dp"/>
 
                 <ImageView
+                    android:id="@+id/imgMainPageAddApp"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:src="@drawable/ic_add"
