--- a/app/src/main/res/layout/activity_edit_page.xml
+++ b/app/src/main/res/layout/activity_edit_page.xml
@@ -7,9 +7,37 @@
     android:layout_height="match_parent"
     tools:context=".EditPage">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tlEditPage"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/imgEditPageBackArrow"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_back_arrow"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvEditPage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tlEditPage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
