feat(BlockedAppPage): basic block page

--- a/app/src/main/res/layout/activity_blocked_app_page.xml
+++ b/app/src/main/res/layout/activity_blocked_app_page.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:theme="@style/ThemeOverlay.FocusFlow.FullscreenContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/fullscreenBackgroundColor"
-    android:theme="@style/ThemeOverlay.FocusFlow.FullscreenContainer"
     tools:context=".BlockedAppPage">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <TextView
-        android:id="@+id/fullscreen_content"
+    <TextView android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true"
-        android:text="@string/dummy_content"
         android:textColor="?attr/fullscreenTextColor"
+        android:keepScreenOn="true"
+        android:textStyle="bold"
         android:textSize="50sp"
-        android:textStyle="bold" />
+        android:gravity="center"
+        android:text="@string/blocked_app_page_title" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
@@ -43,7 +42,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:text="@string/blocked_app_page_unblock_button" />
 
         </LinearLayout>
     </FrameLayout>
