--- a/app/src/main/res/layout/activity_edit_page.xml
+++ b/app/src/main/res/layout/activity_edit_page.xml
@@ -11,22 +11,36 @@
         android:id="@+id/tlEditPage"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="?attr/colorPrimary"
+        android:background="#2a2a2a"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
 
             <ImageView
-                android:id="@+id/imgEditPageBackArrow"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_back_arrow"
-                android:layout_gravity="center"/>
+                android:id="@+id/imgEditPageBack"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="-5dp"
+                android:src="@drawable/ic_back_arrow"/>
 
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imgEditPageLogo"
+                android:layout_marginBottom="3dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/focus_flow_png_logo_only"
+                android:contentDescription="Focus Flow Logo" />
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
