--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -8,13 +8,52 @@
     android:layout_height="match_parent"
     tools:context=".MainPage">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tlMainPage"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#2a2a2a"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/imgMainPageLogout"
+                android:layout_width="40dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="-5dp"
+                android:src="@drawable/ic_logout"/>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/imgMainPageLogo"
+                android:layout_marginBottom="3dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/focus_flow_png_logo_only"
+                android:contentDescription="Focus Flow Logo" />
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+
+
     <LinearLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tlMainPage">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,6 +88,8 @@
 
         <LinearLayout
             android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            android:layout_margin="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -56,30 +97,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_gravity="center">
+                android:layout_gravity="center_vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="blocked apps"
+                    android:text="Blocked Apps"
                     android:textColor="@color/black"
                     android:textSize="30sp"
+                    android:layout_margin="10dp"
                     android:layout_gravity="center"
                     android:layout_weight="1"/>
 
                 <ImageView
+                    android:layout_gravity="center"
                     android:id="@+id/imgMainPageAddApp"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:src="@drawable/ic_add"
-                    android:layout_margin="10dp"/>
+                    android:layout_margin="5dp"/>
 
                 <Button
                     android:id="@+id/bMPedit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
                     android:text="Edit"
-                    android:padding="5dp"
+                    android:textColor="#ffffff"
+                    android:background="#074E46"
+                    android:padding="10dp"
+                    android:layout_margin="10dp"
                     android:layout_gravity="center" />
 
             </LinearLayout>
@@ -88,7 +134,7 @@
                 android:id="@+id/rvBlockedAppsRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:background="#784"/>
+                android:padding="10dp" />
 
         </LinearLayout>
 
