--- a/app/src/main/res/layout/item_blocked_app.xml
+++ b/app/src/main/res/layout/item_blocked_app.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="0dp">
 
     <ImageView
         android:id="@+id/ivItemBlockedApp"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:contentDescription="Blocked App Icon"
-        android:padding="16dp"
         android:src="@drawable/instagram"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
