--- a/app/src/main/res/layout/activity_blocked_app_page.xml
+++ b/app/src/main/res/layout/activity_blocked_app_page.xml
@@ -1,61 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fullscreenContent"
     xmlns:tools="http://schemas.android.com/tools"
     android:theme="@style/ThemeOverlay.FocusFlow.FullscreenContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/fullscreenBackgroundColor"
+    android:background="@drawable/background_gradient"
     tools:context=".BlockedAppPage">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-    <TextView android:id="@+id/fullscreen_content"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="?attr/fullscreenTextColor"
-        android:keepScreenOn="true"
-        android:textStyle="bold"
-        android:textSize="50sp"
-        android:gravity="center"
-        android:text="@string/blocked_app_page_title" />
-
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="@style/Widget.Theme.FocusFlow.ButtonBar.Fullscreen"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
-
-            <Button
-                android:id="@+id/dummy_button"
-                style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/blocked_app_page_unblock_button" />
-
-        </LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/promptTextView"
-            android:layout_width="103dp"
-            android:layout_height="25dp"
+            android:id="@+id/tvBlockedPageAppName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="160dp"
+            android:gravity="center"
+            android:shadowColor="#000000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="4"
+            android:text="@string/blocked_app_page_title"
+            android:textColor="#FFFFFF"
+            android:textSize="28sp"
+            android:maxLines="3"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvBlockedPagePrompt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="100dp"
-            android:text="placeholder_prompts_will_be_overriden"
-            android:textColor="?attr/fullscreenTextColor"
-            android:textSize="18sp" />
+            android:layout_margin="10dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lineSpacingExtra="2dp"
+            android:text="This is a sample placeholder text."
+            android:textColor="#FFFFFF"
+            android:textSize="30sp"
+            android:textStyle="normal" />
 
-    </FrameLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/llBlockedPageBottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="24dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivBlockedPageLogo"
+            android:layout_margin="0dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/focus_flow_png_logo_only" />
+
+        <Button
+            android:id="@+id/btnBlockedPageReturn"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_return_gradient"
+            android:padding="12dp"
+            android:text="Return"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:layout_marginBottom="15dp"/>
+
+        <Button
+            android:id="@+id/btnBlockedPageUnblock"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_gradient"
+            android:padding="12dp"
+            android:text="Unblock App"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 </FrameLayout>
